--- a/packages/common/expensy_common/pubspec.yaml
+++ b/packages/common/expensy_common/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   google_fonts: ^6.2.1
   expensy_authentication_remote_data_source:
     path: ../../data-source/remote/expensy_authentication_remote_data_source
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
