--- a/packages/data-source/remote/expensy_expenses_list_remote_data_source/pubspec.yaml
+++ b/packages/data-source/remote/expensy_expenses_list_remote_data_source/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  expensy_firebase:
+    path: ../../../data-source/firebase/expensy_firebase
 
 dev_dependencies:
   flutter_test:
