--- a/packages/presentations/expensy_expenses_list_presentation/pubspec.yaml
+++ b/packages/presentations/expensy_expenses_list_presentation/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   loading_animation_widget: ^1.3.0
   flutter_bloc: ^9.1.1
   equatable: ^2.0.7
+  expensy_expenses_list_remote_data_source:
+    path: ../../data-source/remote/expensy_expenses_list_remote_data_source
 dev_dependencies:
   flutter_test:
     sdk: flutter
