Create expenses list page , expense details page and refactor dashboard page latest expenses section.

--- a/packages/common/expensy_common/pubspec.yaml
+++ b/packages/common/expensy_common/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
   expensy_authentication_remote_data_source:
     path: ../../data-source/remote/expensy_authentication_remote_data_source
   font_awesome_flutter: ^10.8.0
-
+  expensy_firebase:
+    path: ../../data-source/firebase/expensy_firebase
 dev_dependencies:
   flutter_test:
     sdk: flutter
