--- a/packages/presentations/expensy_expenses_list_item_details_presentation/pubspec.yaml
+++ b/packages/presentations/expensy_expenses_list_item_details_presentation/pubspec.yaml
@@ -9,7 +9,14 @@ dependencies:
   flutter:
     sdk: flutter
   expensy_common:
-    path: ../../common/expensy_common    
+    path: ../../common/expensy_common
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
+  fl_chart: ^1.0.0
+  expensy_expenses_list_item_details_remote_data_source:
+    path: ../../data-source/remote/expensy_expenses_list_item_details_remote_data_source
+  loading_animation_widget: ^1.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
